fixed image head-cutoff

--- a/src/style/_about.scss
+++ b/src/style/_about.scss
@@ -6,7 +6,7 @@
   .headline {
     @extend .section;
     background-position-x: center;
-    background-position-y: -105px;
+    background-position-y: -87px;
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0;
